<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_onboarding"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_title_default"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@id/iv_onboarding"
        app:layout_constraintEnd_toEndOf="@id/iv_onboarding"
        app:layout_constraintTop_toBottomOf="@id/iv_onboarding"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_name_onboarding"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:hint="@string/txt_hint_input_name"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:background="@drawable/bg_edit_text"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/iv_onboarding"
        app:layout_constraintEnd_toEndOf="@id/iv_onboarding"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:imeOptions="actionGo"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="24dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/txt_start_button"
        app:layout_constraintStart_toStartOf="@id/iv_onboarding"
        app:layout_constraintEnd_toEndOf="@id/iv_onboarding"
        app:layout_constraintTop_toBottomOf="@id/et_name_onboarding"
        android:background="@drawable/bg_button_start"/>
</androidx.constraintlayout.widget.ConstraintLayout>