<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_greeting"
        tools:text="Hi, Susan !"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center|start"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@id/iv_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_user"
        app:layout_constraintEnd_toStartOf="@id/iv_user"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_user"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_dashboard"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        app:layout_constraintStart_toStartOf="@id/tv_greeting"
        app:layout_constraintEnd_toEndOf="@id/iv_user"
        android:background="@drawable/bg_dashboard"
        >
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pb_achieved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:indicatorColor="@color/white"
            app:indicatorSize="70dp"
            app:indicatorTrackGapSize="0dp"
            app:trackThickness="8dp"
            app:trackColor="@color/colorTrack"
            android:indeterminate="false"
            android:progress="20"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_achieved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:text="15%"
            app:layout_constraintStart_toStartOf="@id/pb_achieved"
            app:layout_constraintEnd_toEndOf="@id/pb_achieved"
            app:layout_constraintTop_toTopOf="@id/pb_achieved"
            app:layout_constraintBottom_toBottomOf="@id/pb_achieved"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_vocab_available"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_available_vocabulary"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/pb_achieved"
            app:layout_constraintTop_toTopOf="@id/pb_achieved"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_vocab_available_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_available_value"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toEndOf="@id/pb_achieved"
            app:layout_constraintTop_toBottomOf="@id/tv_title_vocab_available"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>